<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:background="@color/color6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

    <include
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        layout="@layout/view_sample_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.kakao.sdk.sample.common.widget.ProfileLayout
                android:id="@+id/com_kakao_user_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckedTextView
                android:id="@+id/user_check_button"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                style="@style/iconText"
                android:drawableLeft="@drawable/icon_story_01"
                android:drawableStart="@drawable/icon_story_01"
                android:text="@string/kakaostory_user_check_button" />

            <ImageView
                android:background="@color/color4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"/>

            <CheckedTextView
                android:id="@+id/profile_button"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                style="@style/iconText"
                android:drawableLeft="@drawable/icon_story_02"
                android:drawableStart="@drawable/icon_story_02"
                android:text="@string/kakaostory_profile_button" />

            <ImageView
                android:background="@color/color4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"/>

            <CheckedTextView
                android:id="@+id/text_post_button"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                style="@style/iconText"
                android:drawableLeft="@drawable/icon_story_03"
                android:drawableStart="@drawable/icon_story_03"
                android:text="@string/kakaostory_note_post_button" />

            <ImageView
                android:background="@color/color4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"/>

            <CheckedTextView
                android:id="@+id/image_post_button"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                style="@style/iconText"
                android:drawableLeft="@drawable/icon_story_04"
                android:drawableStart="@drawable/icon_story_04"
                android:text="@string/kakaostory_photo_post_button" />

            <ImageView
                android:background="@color/color4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"/>

            <CheckedTextView
                android:id="@+id/link_post_button"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                style="@style/iconText"
                android:drawableLeft="@drawable/icon_story_05"
                android:drawableStart="@drawable/icon_story_05"
                android:text="@string/kakaostory_link_post_button" />

            <ImageView
                android:background="@color/color4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"/>

            <CheckedTextView
                android:id="@+id/story_friend_list"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                style="@style/iconText"
                android:drawableLeft="@drawable/icon_story_01"
                android:drawableStart="@drawable/icon_story_01"
                android:text="@string/text_friends" />

            <ImageView
                android:background="@color/color4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/get_last_story"
                    android:layout_weight="1"
                    android:enabled="false"
                    style="@style/button"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/selector_button_01"
                    android:text="@string/kakaostory_get_post_button" />

                <Button
                    android:id="@+id/get_posts_button"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/selector_button_01"
                    android:enabled="false"
                    style="@style/button"
                    android:text="@string/kakaostory_get_posts_button" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/logout_button"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/selector_button_03"
                    style="@style/button"
                    android:text="@string/com_kakao_logout_button" />

                <Button
                    android:id="@+id/delete_post_button"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:enabled="false"
                    android:background="@drawable/selector_button_02"
                    style="@style/button"
                    android:text="@string/kakaostory_delete_post_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>