<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color8"
    tools:context="com.kakao.sdk.sample.common.LoginFragmentActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">
        <TextView
            android:text="@string/text_login_activity"
            android:textColor="@color/color6"
            android:textSize="25sp"
            android:drawableTop="@drawable/icon_login"
            android:drawablePadding="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <com.kakao.usermgmt.LoginButton
        android:id="@+id/login_button_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
</RelativeLayout>
