<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/color8"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">
        <TextView
            android:text="@string/text_for_login_kakao_account"
            android:textColor="@color/color6"
            android:textSize="25sp"
            android:drawableTop="@drawable/icon_login"
            android:drawablePadding="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:text="@string/text_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login_with_activity"
        android:layout_above="@+id/button_login_with_fragment"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:text="@string/text_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login_with_fragment"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>

