<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- for usermgmt -->
    <string name="com_kakao_login_button">Log in with KakaoAccount</string>
    <string name="com_kakao_logout_button">Log out</string>
    <string name="com_kakao_confirm_logout">Are you sure to log out from this app?</string>
    <string name="com_kakao_ok_button">OK</string>
    <string name="com_kakao_cancel_button">Cancel</string>
    <string name="com_kakao_unlink_button">Unlink</string>
    <string name="com_kakao_tokeninfo_button">Token Info</string>
    <string name="com_kakao_confirm_unlink">Are you sure to unlink from this app?</string>
    <string name="com_kakao_profile_nickname">Nickname</string>
    <string name="com_kakao_profile_userId">Kakao User ID</string>

    <string name="com_kakao_kakaotalk_account">with KakaoTalk</string>
    <string name="com_kakao_kakaostory_account">with KakaoStory</string>
    <string name="com_kakao_other_kakaoaccount">with another KakaoAccount</string>
    <string name="com_kakao_account_cancel">Cancel</string>
    <string-array name="com_kakao_accounts_array">
        <item>@string/com_kakao_kakaotalk_account</item>
        <item>@string/com_kakao_other_kakaoaccount</item>
        <item>@string/com_kakao_account_cancel</item>
    </string-array>

    <string name="com_kakao_login_image_tts">Login with KakaoAccount, Image</string>
    <string name="com_kakao_login_button_tts">Log in with KakaoAccount, Button</string>
    <string name="com_kakao_kakaotalk_account_tts">with KakaoTalk, Button</string>
    <string name="com_kakao_kakaostory_account_tts">with KakaoStory, Button</string>
    <string name="com_kakao_other_kakaoaccount_tts">with another KakaoAccount, Button</string>
    <string name="com_kakao_account_cancel_tts">Cancel, Button</string>
    
    <string name="com_kakao_talk_chooser_text">Which version of KakaoTalk would you like to use?</string>
</resources>